# api/controller/application_controller.go
@@ -1,0 +1,27 @@
+package controller
+
+import (
+	"context"
+
+	api "github.com/sinakeshmiri/imcore/api/generated"
+)
+
+func (h *Handler) ListApplications(ctx context.Context, request api.ListApplicationsRequestObject) (api.ListApplicationsResponseObject, error) {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (h *Handler) CreateApplication(ctx context.Context, request api.CreateApplicationRequestObject) (api.CreateApplicationResponseObject, error) {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (h *Handler) GetApplication(ctx context.Context, request api.GetApplicationRequestObject) (api.GetApplicationResponseObject, error) {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (h *Handler) PatchApplication(ctx context.Context, request api.PatchApplicationRequestObject) (api.PatchApplicationResponseObject, error) {
+	//TODO implement me
+	panic("implement me")
+}
